fix: mobile alignment

--- a/src/style.scss
+++ b/src/style.scss
@@ -69,5 +69,6 @@ canvas {
 
   a {
     color: #000;
+    line-height: 1em;
   }
 }
